[package]
name = "chrip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = []
#default-features = false
#features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg"]

#[package.metadata.vcpkg]
#git = "https://github.com/microsoft/vcpkg"
#rev = "a7b6122"
#dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
